# ptensor

./: .clang-format  .clang-format-ignore  .clang-tidy  .claudeignore  .gitignore  .gitmodules  .ignore  .runsettings  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Justfile  LICENSE  README.md  VCPKG_PORT_USAGE.md  default.profraw  launch.json  ptensorConfig.cmake.in  test.npz  test_dtypes.npz  vcpkg.json  view_test.py
bindings/python/: README.md  pyproject.toml
bindings/python/src/ptensor/: __init__.py  _core_binding.py  _tensor_binding.py
bindings/python/tests/: test_tensor.py
native/c/: CMakeLists.txt
native/c/include/ptensor/: config.h  ptensor_device.h  ptensor_dtype.h  ptensor_error.h  ptensor_int_types.h  ptensor_tensor.h  (+1 more)
native/c/src/: dtype_wrapper.hpp  ptensor_dtype.cpp  ptensor_error.cpp  ptensor_tensor.cpp  tensor_cast.hpp  tensor_wrapper.hpp  update_error_state.hpp
native/cpp/: CMakeLists.txt
native/cpp/core/: CMakeLists.txt  ptensorConfig.cmake.in
native/cpp/guiapp/: CMakeLists.txt
native/cpp/infer/: CMakeLists.txt
native/cpp/io/: CMakeLists.txt
native/cpp/media/: CMakeLists.txt
native/cpp/op/: CMakeLists.txt
native/cpp/recog/: CMakeLists.txt
native/cpp/simd/: CMakeLists.txt
native/cpp/testing/: CMakeLists.txt
native/tests/: CMakeLists.txt
src/: CMakeLists.txt  ptensor_bundle.cpp
src/c/: CMakeLists.txt  infer_wrapper.hpp  media_wrapper.hpp  ptensor_capi.version  ptensor_media.cpp
src/c/src/: dtype_wrapper.hpp  media_wrapper.hpp  ptensor_dtype.cpp  ptensor_infer.cpp  ptensor_media.cpp  ptensor_tensor.cpp  update_error_state.hpp
src/core/: CMakeLists.txt  base64.cpp  base64.hpp  dtype.cpp  initialize.cpp  ptensor_lldb.py  tensor.cpp  tensor.transpose.avx2.hpp  tensor.transpose.cpp  tensor.transpose.neon.hpp  tensor.transpose.portable.hpp  tensor_print.cpp
src/core/benchmarks/: CMakeLists.txt  bench_transpose.cpp
src/core/detail/: blob.cpp  string.cpp
src/core/src/: base64.cpp  dtype.cpp  p10_error.cpp  stride.cpp  tensor.cpp  tensor.transpose.cpp  tensor_print.cpp
src/core/tests/: CMakeLists.txt  test_dtype.cpp  test_map_eigen.cpp  test_map_opencv.cpp  test_ptensor_error.cpp  test_shape.cpp  test_stride.cpp  test_tensor.cpp  test_tensor_print.cpp
src/infer/: CMakeLists.txt  coreml_infer.hpp  coreml_infer.mm  infer.cpp  model_downloader.cpp  ort_conversions.hpp  ort_infer.cpp  ort_infer.hpp
src/infer/app/: face_detector_cli.cpp
src/infer/src/: infer.cpp  model_downloader.cpp  ort_infer.cpp  ort_infer.hpp
src/infer/tests/: CMakeLists.txt  test_infer.cpp
src/io/: CMakeLists.txt  audio.cpp  image.cpp  numpy.cpp
src/io/src/: audio.cpp  image.cpp  numpy.cpp
src/io/tests/: CMakeLists.txt  test_image.cpp  test_numpy.cpp
src/log/: CMakeLists.txt  log.cpp
src/log/src/: log.cpp
src/log/tests/: CMakeLists.txt  test_log.cpp
src/media/: CMakeLists.txt
src/media/apps/: CMakeLists.txt  camera_controller.cpp  transcoder.cpp
src/media/io/: camera_controls.cpp  camera_controls.hpp  camera_controls_avf.mm  logging.hpp  media_capture.cpp  media_capture.impl.hpp  media_device.cpp  media_writer.cpp  media_writer.impl.hpp  text_streams.cpp  video_queue.hpp
src/media/samples/: CMakeLists.txt  player.cpp  transcoder.cpp
src/media/tests/: CMakeLists.txt  test_ffmpeg_sws.cpp  test_media_capture.cpp  test_media_text.cpp  test_media_writer.cpp  test_video_queue.cpp
src/op/: CMakeLists.txt  blur.cpp  blur.fast.hpp  blur.general.cpp  blur.hblur.avx2.hpp  blur.hblur.hpp  blur.hblur.neon.hpp  blur.hblur.portable.hpp  crop.cpp  fft.cpp  image_layout.cpp  image_rgb_to_gray.cpp  resize.cpp  statistics.cpp  tensor_scalar.cpp  window_function.cpp
src/op/src/: accumulator_traits.hpp  blur.cpp  elementary.cpp  fft.cpp  image_layout.cpp  image_rgb_to_gray.cpp  laplacian_pyramid.cpp  resize.cpp  stack.cpp  statistics.cpp  wave.cpp  window_function.cpp
src/op/tests/: CMakeLists.txt  test_blur.cpp  test_crop.cpp  test_fft.cpp  test_image.cpp  test_image_layout.cpp  test_image_rgb_to_gray.cpp  test_laplacian_pyramid.cpp  test_resize.cpp  test_stack.cpp  test_statistics.cpp  test_tensor_scalar.cpp  testing.cpp  testing.hpp
src/ptensor/: _core_binding.py  _tensor_binding.py
src/ptensor-vscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json
src/ptensor-vscode/cpp/: CMakeLists.txt  viewer_demo.cpp
src/ptensor-vscode/scripts/: copy-viewer.mjs  esbuild.mjs
src/ptensor-vscode/src/: debugTracker.ts  extension.ts  readTensor.ts  stats.ts  tensorPanel.ts  tensorReader.ts
src/recog/: CMakeLists.txt  face_detector.cpp  nms.cpp  nms.hpp
src/recog/blaze_face/: bf_postprocess.cpp  bf_preprocess.cpp  bf_preprocess.hpp  blaze_face.cpp
src/recog/face_det_lite/: face_det_lite.cpp  face_det_lite.hpp
src/recog/src/: face_detection.cpp  nms.hpp
src/recog/ssd_anchors/: ssd_anchor_cache.cpp  ssd_anchor_cache.hpp  ssd_anchor_decoder.cpp  ssd_anchor_decoder.hpp
src/recog/tests/: CMakeLists.txt  test_face_detection_to_string.cpp  test_face_detectors.cpp
src/simd/: CMakeLists.txt  cpuid.linux.cpp  cpuid.macos.cpp  cpuid.wasm.cpp  cpuid.windows.cpp
src/simd/tests/: CMakeLists.txt  test_bitwise.cpp  test_tile.cpp  test_tile1d.cpp  test_tile2d.cpp
src/testing/: CMakeLists.txt
src/testing/tests/: test_catch2_assertions.cpp
src/viz/: CMakeLists.txt  app_icon.cpp  app_icon.hpp  gui_app.cpp  image_texture.cpp  logging.hpp  texture_stager.cpp  texture_stager.hpp  video_player_component.cpp
src/viz/metal/: gui_app.impl.cpp  image_texture.impl.cpp  image_texture.impl.hpp
src/viz/samples/: CMakeLists.txt  sample_video.cpp  sample_window.cpp
src/viz/src/: gui_app.cpp  image_texture.cpp  video_player_component.cpp
src/viz/tests/: CMakeLists.txt  test_timer.cpp
src/viz/vulkan/: gui_app.impl.cpp  image_texture.impl.cpp  image_texture.impl.hpp  imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_error.cpp
tests/: CMakeLists.txt
tests/data/: downloadAssets.ts
wasm/cpp/: CMakeLists.txt  common.hpp  js_shape.hpp  module.cpp  wasm_shape.hpp  wasm_tensor.hpp
(+510 files in other folders)
